change content of post_list.html to bikelewa page

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,3 +1,4 @@
+<!-- 
 <html>
     <head>
         <title>Welcome to Bikelewa's blog</title>
@@ -19,4 +20,137 @@
             <p>One of the Sunnah in Islam, When the basis is Islam, then everything about it is PEACE</p>
         </div>
     </body>
+</html>
+ -->
+ <!DOCTYPE HTML>
+<html>
+   <head>
+      <title>Bikelewa's blog</title>
+      <link rel="stylesheet" type="text/css" href="style.css">
+    
+    <style>
+      
+      div{
+
+        background-color: purple;
+        width: 1000px;
+        height: 550px;
+        border: 20px;
+        padding: 20px;
+
+      }
+      button{
+            width: 150px;
+            height: 50px;
+            background-color: green; 
+            padding: 5px;
+      }
+      
+       button:hover {
+        background-color: orange;
+       }
+
+      
+           
+    </style>
+</head>
+       <body>
+        <form>
+           <input type="text" placeholder="write your Fullname here" name="Name">
+           <button>Submit!</button>
+        </form>
+        <div>
+        <p>
+            <h1> <em style="color: Orange" >Welcome to Bikelewa's make-over</em><h1>
+
+            </br>          
+            <h3>Our services entails bridal making-up,face painting, gele tieing and general wedding planning </h3>
+                for more info kindly follow us on <a href="https://www.ladymakeup.com/">We are Bikelewa</a>></br>
+                what number should I call for reservation
+            <h4>Please visit our page for contact ad reservation time schedule </h4>
+                We have moved to a new office in Finalnd and customers could find us at <a href="https://www.vantaa.fi/sauvatie">Our Location</a>
+          </p>
+          <h2>Bikelewa Services</h2>
+          <table>
+            <tr>
+              <th>
+                Service type
+              </th>
+              <th>
+                Duration
+              </th>
+              <th>
+                Prices
+              </th>
+            </tr>
+            <tr>
+              <td style="color: green; text-align: center;">Gele tieing</td>
+              <td>5-7mins</td>
+              <td>1500-5000</td>
+            </tr>
+            <tr>
+              <td>Bridal Make-up</td>
+              <td>45-59mins</td>
+              <td>15000-50000</td>
+            </tr>
+            <tr>
+              <td>face painting</td>
+              <td>35-65mins</td>
+              <td>17000-75000</td>
+            </tr>
+          </table>
+
+          <p>                     
+             hello madam <span class="name">Bikelewa </span> please kindly confirm your new shop address to me
+                     
+          </p>
+        </div>
+        <h3 id="">List of our partner companies</h3>
+        <ul>
+          <li>Alaga</li>>
+           <li><a href="#Fish Farmers">Fish Farmers</a></li>
+           <li><a href="#TennyVickky">TennyVickky</a></li>
+           <li>Fashion House</li>
+           <li>Babs Tutors</li>
+           <li>BJ Properties</li>
+          </tr>
+        </ul>
+        <h2 id="Fish Farmers">Fish farmer</h2>
+          <p>
+            We provide professonal services in fish farming and also manag all your family affairs
+          </p>
+        <h2 id="TennyVickky">TennyVickky</h2>
+          <p>
+            We provide professional services in photography and events management/celebration documentation
+          </p>
+          <form>
+            <div> 
+                <h3>Customer service Form</h3>
+                
+              <input type="text" name="customers Name" placeholder="Full Name">
+            </br>
+              <input type="text" name="address" placeholder="address">
+            </br>
+              <input type="text" name="sex" placeholder="sex">
+            </br>
+              <input type="number" name="phone number" placeholder="phone number"> 
+              </br>            
+              <input type="text" list="services" placeholder="services">
+              </br></br>
+               <datalist id= "services">
+                  <option value="Gele tieing">
+                  <option value="Bridal Make-up">
+                  <option value="Face painting">
+                  <option value="photo shoot">                     
+               </datalist>
+
+             </br>
+             <button type="Submit" value="Services">Submit form</button>
+
+            </div>
+          </form>
+
+       </body>
+    </div>
+     
 </html>
