--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,4 +1,5 @@
-<!-- 
+
+
 <html>
     <head>
         <title>Welcome to Bikelewa's blog</title>
@@ -6,23 +7,40 @@
     <body>
         <div>
             <h1><a href="/">Welcome to Bikelewa's blog</a></h1>
-        </div>
-
-        <div>
+       
+          {{post}}
             <p>published: 13.07.2018, 10:50</p>
             <h2><a href="">My Profile</a></h2>
             <p>My name is Kuti Khafila. Am an accountant and firm make-up artist. I enjoy photography and also modelling for islamic fashion house. At Bikelewa make-overs, our services entals: face painting, gele tieing, bridal make-up, event and movie make-ups</p>
         </div>
-
         <div>
+          <div>
+    <h1><a href="/">Django Girls Blog</a></h1>
+</div>
+
+{% for post in posts %}
+    <div>
+        <p>published: {{ post.published_date }}</p>
+        <h1><a href="">{{ post.title }}</a></h1>
+        <p>{{ post.text|linebreaksbr }}</p>
+    </div>
+{% endfor %}
+
+        
+
+       <!-- <div>
             <p>published: 11.07.2018, 12:14</p>
             <h2><a href="">The beauty of Marriage</a></h2>
             <p>One of the Sunnah in Islam, When the basis is Islam, then everything about it is PEACE</p>
         </div>
     </body>
+    ---->
+  </div>
 </html>
- -->
- <!DOCTYPE HTML>
+
+
+
+<!--- <!DOCTYPE HTML>
 <html>
    <head>
       <title>Bikelewa's blog</title>
@@ -149,8 +167,9 @@
 
             </div>
           </form>
-
+               
        </body>
     </div>
      
 </html>
+
